初步完成立饱app

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>libao</title>
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1.0, minimum-scale=1" id="vp"/>
         <link rel="stylesheet" href="//at.alicdn.com/t/font_647901_tgmk88cfdjjj1yvi.css">
-        <script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.js"></script>
+        <script type="text/javascript" src="src/utils/jquery-3.2.1.js"></script>
         <script type="text/javascript">
             // 把尺寸放大N倍（N是window.devicePixelRatio）
             var wd = document.documentElement.clientWidth*window.devicePixelRatio/10;
